# SynthEngineDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SynthEngineDemoConfig.cmake.in
JuceLibraryCode/: JuceHeader.h
src/: ARAArchieveIO.cpp  ARAArchieveIO.h  ARAContext.cpp  ARAContext.h  ARAContextReader.cpp  ARAContextReader.h  ARADocument.cpp  ARADocument.h  ARADocumentController.cpp  ARADocumentController.h  ARARenderThread.cpp  ARARenderThread.h  ARARenderer.cpp  ARARenderer.h  EditorStatusModel.cpp  EditorStatusModel.h  EngineDemoEditor.cpp  EngineDemoEditor.h  EngineDemoProcessor.cpp  EngineDemoProcessor.h  EngineRenderer.cpp  EngineRenderer.h  KarPlusStrong.cpp  KarPlusStrong.h  RealTimeRenderer.cpp  RealTimeRenderer.h
src/test/: TestApplication.cpp
test/: test.bat
